2008-05-30  Ivan N. Zlatev  <contact@i-nz.net>

	* ControlBindingsConverter.cs: Fix 1.1 build.

2008-05-30  Ivan N. Zlatev  <contact@i-nz.net>

	* ControlBindingsConverter.cs: Implementated just enough to avoid 
	the circular dependency in the MWF PropertyGrid.

2008-05-12  Ivan N. Zlatev  <contact@i-nz.net>

	* StringCollectionEditor.cs: Handle String.Empty as a valid 
	edited value.

2008-03-01  Ivan N. Zlatev  <contact@i-nz.net>

	* ControlDesigner.cs: Ignore the first WM_MOUSEMOVE after
	WM_MOUSEDOWN as it is sent just after it.
	* ParentControlDesigner.cs: Monitor Component Remove events
	and fire ComponentChanging/ed events for the Parent of the removed
	Control. Helps the UndoEngine to serialize parent changes.
	* ControlDesigner.cs: Set the Control.Text to be the component name.
	* FormDocumentDesigner.cs: Added.
	* PanelDesigner.cs: Added.
	* UISelectionService.cs: Set Parent through the TypeDescriptor, so
	that component change notifications get fired.
	* DefaultMenuCommands.cs: Implement Cut, Copy, Paste
	* DocumentDesigner: 
	 - Drop Form specific code.
	 - Add menu commands.

2008-02-29  Ivan N. Zlatev  <contact@i-nz.net>

	* StringCollectionEditor.cs: 
	 - Split the lines not based on Environment.NewLine as this is 
	 not what is used by MWF on Windows.
	 - Ignore last empty line.
	[Fixes bug #365948]

2008-02-11  Ivan N. Zlatev  <contact@i-nz.net>

	* AnchorEditor.cs: More sensible default width.

2008-01-24  Ivan N. Zlatev  <contact@i-nz.net>

	 * DockEditor.cs: ITypeDescriptorContext.Instance doesn't 
	 contain the current value. It could contain the owner.
	 Use the initial value parameter.

2008-01-04  Ivan N. Zlatev  <contact@i-nz.net>
	
	* ParentControlDesigner.cs: Create a Transaction when adding a
	component.

2007-10-09  Atsushi Enomoto  <atsushi@ximian.com>

	* BorderSidesEditor.cs, DesignerOptions.cs,
	  ImageListCodeDomSerializer.cs, ImageListImageEditor.cs,
	  MaskDescriptor.cs, ShortcutKeysEditor.cs,